Migrate JUnit 4 Assert To JUnit Jupiter Assertions